--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@quasar/cli": "^1.1.3",
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.7.0",
     "firebase": "^8.0.0",
